--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
             font-family: 'Noto Sans JP', sans-serif;
         }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
@@ -31,5 +33,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- 必须包含此脚本标签，Vite 才能识别入口 -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
